Archive2/66/ebd0fa181e2138/output
main.cpp:5:4: error: #error This application needs at least a C++11 compliant compiler
   #error This application needs at least a C++11 compliant compiler
    ^
main.cpp: In function 'int main()':
main.cpp:11:25: error: 'to_string' is not a member of 'std'
     std::string f_str = std::to_string(f);
                         ^
